--- a/force-app/main/default/lwc/note/note.css
+++ b/force-app/main/default/lwc/note/note.css
@@ -13,27 +13,44 @@
     box-shadow: 0px 0px 5px #888888;
     display: flex;
     flex-direction: column;
-    overflow: hidden;
+    /* overflow: hidden; */
     margin: 5px;
-    position: relative; 
+    position: relative;
+}
+.note-date{
+    position: absolute;
+    bottom: 5px;
+    left: 5px;
+    
+}
+.note-label{
+    margin-top: -10px;
 }
 
-.delete-button {
+
+.slds-shrink{
+    margin-top: -80px;
+}
+.slds-button{
+    color: #000000 ;
+    border: none;
+}
+/* .delete-button {
     position: absolute;
     top: 5px;
-    /* right: 5px;
-    left: -5px; */
+    right: 5px;
     width: 10px;
     height: 10px;
     /* background-color: #ff0000; */
     /* color: #ffffff; */
-    border: none;
+    /* border: none; */
     /* border-radius: 50%; */
-    cursor: pointer;
+    /* cursor: pointer; */
     /* outline: none; */
+    /* z-index: 1; */
 
 
-}
+/* }  */
 
 .note-label{
     font-weight: bold;
