--- a/force-app/main/default/lwc/note/note.css
+++ b/force-app/main/default/lwc/note/note.css
@@ -4,23 +4,33 @@
     justify-content: flex-start;
     gap: 10px;
 }
+/* .slds-input{
+    margin-top: -20px;
+} */
 
 .note-sticker {
-    width: 6cm;
-    height: 6cm;
+    width: 227px;
+    height: 227px;
     background-color: #ffff00;
     border: 1px solid #000000;
+    border-radius: 5px;
     box-shadow: 0px 0px 5px #888888;
     display: flex;
     flex-direction: column;
-    /* overflow: hidden; */
+    overflow: hidden;
     margin: 5px;
     position: relative;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
 }
 .note-date{
     position: absolute;
     bottom: 5px;
-    left: 5px;
+    left: 10px;
+    color: #000;
+    font-size: 12px;
     
 }
 .note-label{
@@ -29,33 +39,29 @@
 
 
 .slds-shrink{
-    margin-top: -80px;
+    margin-top: -30px;
+    margin-right: -10px;
 }
 .slds-button{
-    color: #000000 ;
-    border: none;
+    color: #000000 !important;
+    border: none !important;
+    background-color: transparent !important;
+    padding: 0 !important;
+
 }
-/* .delete-button {
-    position: absolute;
-    top: 5px;
-    right: 5px;
-    width: 10px;
-    height: 10px;
-    /* background-color: #ff0000; */
-    /* color: #ffffff; */
-    /* border: none; */
-    /* border-radius: 50%; */
-    /* cursor: pointer; */
-    /* outline: none; */
-    /* z-index: 1; */
-
-
-/* }  */
 
 .note-label{
     font-weight: bold;
 }
 
 .note-description{
-    margin-top: 1rem;
+    margin-top: 30px;
+    max-height: 150px;
+    max-width: 150px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow-x: hidden;
+    overflow-x: hidden;
+
 }
