--- a/force-app/main/default/lwc/editStiker/editStiker.css
+++ b/force-app/main/default/lwc/editStiker/editStiker.css
@@ -1,16 +1,14 @@
+
+
 .wraper{
-    width: 430px;
-    height: 430px;
+    width: 100%;
+    height: 450px;
     left: 50%;
     border: 1px solid #000000;
     background-color: yellow;
-    display: flex;
-    flex-direction: column;
+    /* display: flex;
+    flex-direction: column; */
     border-radius: 5px;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    -ms-border-radius: 5px;
-    -o-border-radius: 5px;
 }
 
 .sticker-label{
@@ -20,19 +18,45 @@
     outline: none;
     background-color: yellow;
     margin-top: 10px;
+    font-size: x-large;
 }
+
 .sticker-description{
-    margin-top: 30px;
-    max-height: 150px;
-    max-width: 150px;
+    margin-top: 10px;
+    /* max-height: 90%;
+    max-width: 100%; */
+    width: 100%;
+
+    height: 300px;
     background-color: yellow;
     border: none;
     box-shadow: none;
     outline: none;
+    resize: none;
+    font-size: larger;
+    overflow-y: hidden;
 }
+
 .sticker-created_date{
     bottom: 5px;
     left: 30px;
     color: #000;
-    font-size: 12px;
+    font-size: 16px;
+    font-weight: bold;
+}
+
+.delete_stiket{
+    display: flex;
+    justify-content: flex-end;
+    padding: 5px;
+}
+.stiker_label-wraper{
+    margin-left: 50px;
+}
+.sticker-description_wraper{
+    margin-left: 25px;
+}
+
+.sticker-created_date-wraper{
+    margin-left: 45px;
 }
