--- a/force-app/main/default/lwc/editStiker/editStiker.css
+++ b/force-app/main/default/lwc/editStiker/editStiker.css
@@ -1,13 +1,9 @@
-
-
-.wraper{
+.wrapper{
     width: 100%;
     height: 450px;
     left: 50%;
     border: 1px solid #000000;
     background-color: yellow;
-    /* display: flex;
-    flex-direction: column; */
     border-radius: 5px;
 }
 
@@ -23,10 +19,7 @@
 
 .sticker-description{
     margin-top: 10px;
-    /* max-height: 90%;
-    max-width: 100%; */
     width: 100%;
-
     height: 300px;
     background-color: yellow;
     border: none;
@@ -45,18 +38,18 @@
     font-weight: bold;
 }
 
-.delete_stiket{
+.delete_sticker{
     display: flex;
     justify-content: flex-end;
     padding: 5px;
 }
-.stiker_label-wraper{
+.sticker_label-wrapper{
     margin-left: 50px;
 }
-.sticker-description_wraper{
+.sticker-description_wrapper{
     margin-left: 25px;
 }
 
-.sticker-created_date-wraper{
+.sticker-created_date-wrapper{
     margin-left: 45px;
 }
